Build: Enable boot data sharing with UPSTREAM
Modify the build system (by removing restrictions) to allow boot data
sharing (measured boot) when the 'UPSTREAM' MCUboot repository is
selected as MCUboot v1.6.0 (current default bootloader) already includes
this feature.
Move target specific macros definitions to target specific header files
so that they are not only available in TF-M's MCUboot fork.

Change-Id: Ib30976419d9d668e588c2e4fdb9f42d90d57a7e2
Signed-off-by: David Vincze <david.vincze@linaro.org>

--- a/bl2/ext/mcuboot/CMakeLists.txt
+++ b/bl2/ext/mcuboot/CMakeLists.txt
@@ -101,6 +101,7 @@ if (MCUBOOT_REPO STREQUAL "TF-M")
 		)
 else()
 	list(APPEND ALL_SRC_C
+			"${MCUBOOT_DIR}/bootutil/src/boot_record.c"
 			"${MCUBOOT_DIR}/bootutil/src/swap_scratch.c"
 			"${MCUBOOT_DIR}/bootutil/src/swap_move.c"
 			"${MCUBOOT_DIR}/bootutil/src/swap_misc.c"
@@ -205,6 +206,7 @@ list(FIND _log_levels ${MCUBOOT_LOG_LEVEL} LOG_LEVEL_ID)
 
 if (MCUBOOT_REPO STREQUAL "UPSTREAM")
 	set(MCUBOOT_HW_ROLLBACK_PROT On)
+	set(MCUBOOT_MEASURED_BOOT On)
 endif()
 
 if(MCUBOOT_SIGNATURE_TYPE STREQUAL "RSA-3072")
