--- a/secure_fw/core/ipc/tfm_secure_irq_handlers_ipc.inc.template
+++ b/secure_fw/core/ipc/tfm_secure_irq_handlers_ipc.inc.template
@@ -41,7 +41,7 @@ const struct tfm_core_irq_signal_data_t tfm_core_irq_signals[] = {
         {% endif %}
    {% endif %}
 {% endfor %}
-   {0, 0, 0, 0}                         /* add dummy element to avoid non-standard empty array */
+   {0, 0, (IRQn_Type) 0, 0}                         /* add dummy element to avoid non-standard empty array */
 };
 
 const size_t tfm_core_irq_signals_count = (sizeof(tfm_core_irq_signals) /
