Boot: Upgrade MCUBoot to v1.5.0
Modifies cmake to allow building against upstream v1.5.0
MCUBoot, and changes the version number in the documentation.

Change-Id: If572b8607f1d09c6cc4ef922c3749c67cfe37b6c
Signed-off-by: Balint Matyi <Balint.Matyi@arm.com>

--- a/bl2/ext/mcuboot/CMakeLists.txt
+++ b/bl2/ext/mcuboot/CMakeLists.txt
@@ -99,6 +99,12 @@ if (MCUBOOT_REPO STREQUAL "TF-M")
 			"${TFM_ROOT_DIR}/bl2/src/boot_record.c"
 			"${TFM_ROOT_DIR}/bl2/src/security_cnt.c"
 		)
+else()
+	list(APPEND ALL_SRC_C
+			"${MCUBOOT_DIR}/bootutil/src/swap_scratch.c"
+			"${MCUBOOT_DIR}/bootutil/src/swap_move.c"
+			"${MCUBOOT_DIR}/bootutil/src/swap_misc.c"
+	)
 endif()
 
 #Define location of Mbed Crypto source, build, and installation directory.
