Crypto: Add missing crypto header file when exporting files
When exporting crypto header files, the file crypto_compat.h is missed.
This caused the Non-secure compiling error. This patch is to add the file
to the export list.

Change-Id: I5b61d059f1f9535d427fe3f24dc5a3e06a01a22b
Signed-off-by: Sherry Zhang <sherry.zhang2@arm.com>

--- a/secure_fw/CMakeLists.txt
+++ b/secure_fw/CMakeLists.txt
@@ -426,6 +426,7 @@ function(set_up_secure_fw_build)
 
 	if (TFM_PARTITION_CRYPTO)
 		install(FILES       ${INTERFACE_INC_DIR}/psa/crypto_extra.h
+							${INTERFACE_INC_DIR}/psa/crypto_compat.h
 							${INTERFACE_INC_DIR}/psa/crypto.h
 							${INTERFACE_INC_DIR}/psa/crypto_platform.h
 							${INTERFACE_INC_DIR}/psa/crypto_sizes.h
