SPRTL: Partition Metadata Pointer [Optional Feature]
Partition Metadata Pointer is used to point to the metadata inside one
partition. This pointer is updated by SPM while scheduling and read by
SPRTL.
This feature is one configurable feature and can be enabled if SPRTL
needs to support partition metadata-based APIs, such as partition
private heap management.
This pointer is put at a writeable area, with the name 'TFM_SP_META_PTR'.
Configure 'TFM_SP_META_PTR' with the last MPU region to minimize the
influence to PERIPHERAL regions.

Change-Id: Iaae5ee8f25f0587c6812cc8f977cfa38f46ecd8c
Signed-off-by: Summer Qin <summer.qin@arm.com>

--- a/interface/CMakeLists.txt
+++ b/interface/CMakeLists.txt
@@ -48,6 +48,7 @@ target_compile_definitions(psa_interface
         $<$<BOOL:${TFM_MULTI_CORE_TOPOLOGY}>:TFM_MULTI_CORE_TOPOLOGY>
         $<$<BOOL:${TFM_MULTI_CORE_MULTI_CLIENT_CALL}>:TFM_MULTI_CORE_MULTI_CLIENT_CALL>
         $<$<BOOL:${FORWARD_PROT_MSG}>:FORWARD_PROT_MSG=${FORWARD_PROT_MSG}>
+        $<$<BOOL:${TFM_SP_META_PTR_ENABLE}>:TFM_SP_META_PTR_ENABLE>
 )
 
 ###################### PSA api (S lib) #########################################
