Build: New build option to enable combined build for ITS and PS Arch tests.
New option   : -DPSA_API_TEST_STORAGE=ON

Example usage: -DPSA_API_TEST_INTERNAL_TRUSTED_STORAGE=ON
               -DPSA_API_TEST_PROTECTED_STORAGE=ON
               -DPSA_API_TEST_STORAGE=ON

Change-Id: Ib3dbe7d5e7e8281855b7b7c6021820ef2dedfa4b
Signed-off-by: Vinay Kumar Kotegowder <vinaykumar.kotegowder@arm.com>

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -279,11 +279,8 @@ function(set_up_app_build)
 		target_link_libraries(${EXE_NAME} "${PSA_API_TEST_BUILD_PATH}/val/val_nspe.a")
 		target_link_libraries(${EXE_NAME} "${PSA_API_TEST_BUILD_PATH}/platform/pal_nspe.a")
 	endif()
-	if(PSA_API_TEST_NS AND PSA_API_TEST_INTERNAL_TRUSTED_STORAGE)
-		target_link_libraries(${EXE_NAME} "${PSA_API_TEST_BUILD_PATH}/dev_apis/internal_trusted_storage/test_combine.a")
-	endif()
-	if(PSA_API_TEST_NS AND PSA_API_TEST_PROTECTED_STORAGE)
-		target_link_libraries(${EXE_NAME} "${PSA_API_TEST_BUILD_PATH}/dev_apis/protected_storage/test_combine.a")
+	if(PSA_API_TEST_NS AND (PSA_API_TEST_INTERNAL_TRUSTED_STORAGE OR PSA_API_TEST_PROTECTED_STORAGE OR PSA_API_TEST_STORAGE))
+		target_link_libraries(${EXE_NAME} "${PSA_API_TEST_BUILD_PATH}/dev_apis/storage/test_combine.a")
 	endif()
 	if(PSA_API_TEST_NS AND PSA_API_TEST_CRYPTO)
 		target_link_libraries(${EXE_NAME} "${PSA_API_TEST_BUILD_PATH}/dev_apis/crypto/test_combine.a")
