--- a/secure_fw/ns_callable/tfm_veneers.c.template
+++ b/secure_fw/ns_callable/tfm_veneers.c.template
@@ -31,7 +31,10 @@ psa_status_t {{sec_func.signal.lower()}}(psa_invec *, size_t, psa_outvec *, size
                                          psa_outvec *out_vec, \
                                          size_t out_len) \
     { \
+        bool is_ns = tfm_core_is_ns_client(); \
+      \
         TFM_CORE_IOVEC_SFN_REQUEST(partition_name, \
+                                   is_ns, \
                                    (void *) sfn_name, \
                                    in_vec, in_len, out_vec, out_len); \
     }
