Build: Use CMSIS for testing from tf-m-tests
TF-M testing is using CMSIS RTX as NS OS. It links to the
pre-built RTX libraries from the CMSIS_5 repo.
Because the CMSIS_5 repo will remove the libraries, a copy
of necessary RTX libraries along with source codes is stored
in the tf-m-tests repo.
This patch is to move the CMSIS RTX reference from CMSIS_5
to tf-m-tests.

Change-Id: I19e9ac333b200e69a749607fd1a2374805861be8
Signed-off-by: Kevin Peng <kevin.peng@arm.com>

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -29,11 +29,11 @@ embedded_project_fixup()
 set(MCUBOOT_DIR "${TFM_ROOT_DIR}/bl2/ext/mcuboot")
 include("${MCUBOOT_DIR}/MCUBoot.cmake")
 
-#Set variables
-get_filename_component(CMSIS_DIR ${TFM_ROOT_DIR}/../CMSIS_5/CMSIS ABSOLUTE)
+#CMSIS
+get_filename_component(CMSIS_DIR ${TFM_ROOT_DIR}/../tf-m-tests/CMSIS ABSOLUTE)
 
 if(NOT EXISTS ${CMSIS_DIR})
-	message(FATAL_ERROR "Missing CMSIS_5. Please clone the CMSIS_5 repo to directory \"${CMSIS_DIR}\".")
+	message(FATAL_ERROR "Missing CMSIS. Please clone the tf-m-tests repo.")
 endif()
 
 if (NOT DEFINED BL2)
