--- a/tools/tfm_generated_file_list.yaml
+++ b/tools/tfm_generated_file_list.yaml
@@ -16,10 +16,16 @@
   "version_minor": 1,
   "file_list": [
     {
-        "name": "Secure Partition declarations",
-        "short_name": "tfm_partition_list",
-        "template": "secure_fw/spm/tfm_spm_db.inc.template",
-        "output": "secure_fw/spm/tfm_spm_db.inc"
+        "name": "Secure Partition declarations for library",
+        "short_name": "tfm_partition_list_lib",
+        "template": "secure_fw/spm/tfm_spm_db_func.inc.template",
+        "output": "secure_fw/spm/tfm_spm_db_func.inc"
+    },
+    {
+        "name": "Secure Partition declarations for IPC",
+        "short_name": "tfm_partition_list_ipc",
+        "template": "secure_fw/spm/tfm_spm_db_ipc.inc.template",
+        "output": "secure_fw/spm/tfm_spm_db_ipc.inc"
     },
     {
         "name": "Secure Service list",
