Platform: Unify NS and secure UART STDOUT implementation
The uart_stdout implementations are actually identical for
Non-secure and Secure. The only difference is the actual
underlying stdio driver.
This patch unifies the implementations to one file, using
Macro to distinguish different drivers.

The patch also removes the unused enum uart_channel.

Change-Id: Ice89127cc98bd185947ce8de7af5190bd5bd69dc
Signed-off-by: Kevin Peng <kevin.peng@arm.com>

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -167,7 +167,7 @@ set(BUILD_TARGET_CFG Off)
 set(BUILD_TARGET_HARDWARE_KEYS Off)
 set(BUILD_TARGET_NV_COUNTERS Off)
 set(BUILD_CMSIS_DRIVERS On)
-set(BUILD_UART_STDOUT Off)
+set(BUILD_UART_STDOUT On)
 set(BUILD_FLASH Off)
 if(CORE_TEST_POSITIVE)
 	set(BUILD_PLAT_TEST On)
