Attest: Handle discrepancy in tlv_len definitions
The definition of the 'tlv_len' field in the shared boot data entry
header differs in upstream MCUboot repo and in its TF-M fork.
In the upstream repo the 'tlv_len' only covers the length of the payload
but not the size of the entry header. But in the TF-M fork the 'tlv_len'
covers the size of entry header and payload together. This discrepancy
is distinguished during the shared boot data processing based on which
MCUboot version is used along with TF-M runtime.

Change-Id: I0cc4b2a2e6c53d125514b1da7e44be474abdd9e4
Signed-off-by: David Vincze <david.vincze@linaro.org>

--- a/secure_fw/CMakeLists.txt
+++ b/secure_fw/CMakeLists.txt
@@ -153,16 +153,20 @@ if (DEFINED CMSE_FLAGS)
 endif()
 config_setting_shared_compiler_flags(${PROJECT_OBJ_LIB})
 
-if(NOT DEFINED TARGET_NV_COUNTERS_ENABLE)
+if (NOT DEFINED TARGET_NV_COUNTERS_ENABLE)
 	set(TARGET_NV_COUNTERS_ENABLE OFF)
 endif()
 
-if(TARGET_NV_COUNTERS_ENABLE)
+if (TARGET_NV_COUNTERS_ENABLE)
 	embedded_set_target_compile_defines(TARGET ${PROJECT_OBJ_LIB} LANGUAGE C DEFINES TFM_NVCOUNTERS_ENABLE APPEND)
 endif()
 
-if(BOOT_DATA_AVAILABLE)
+if (BOOT_DATA_AVAILABLE)
 	embedded_set_target_compile_defines(TARGET ${PROJECT_OBJ_LIB} LANGUAGE C DEFINES BOOT_DATA_AVAILABLE APPEND)
+endif()
+
+if (LEGACY_TFM_TLV_HEADER)
+	embedded_set_target_compile_defines(TARGET ${PROJECT_OBJ_LIB} LANGUAGE C DEFINES LEGACY_TFM_TLV_HEADER APPEND)
 endif()
 
 if (NOT DEFINED CORE_TEST)
