Core: Move spm header files to 'spm' folder
- Move 'spm_xxx.h' to 'spm' folder, they should belong to 'spm'.
- Fix and simplify inclusion of header file.
- Fix format and typo error.

Change-Id: I129c6626ddffbbdba0e7edc27e9307f0d6ea9b79
Signed-off-by: Mingyang Sun <mingyang.sun@arm.com>

--- a/secure_fw/spm/model_func/tfm_veneers.c.template
+++ b/secure_fw/spm/model_func/tfm_veneers.c.template
@@ -8,7 +8,7 @@
 {{utilities.donotedit_warning}}
 
 #include "tfm_secure_api.h"
-#include "tfm/spm_partition_defs.h"
+#include "spm_partition_defs.h"
 
 {% for manifest in manifests %}
     {% if manifest.attr.conditional %}
