Dualcpu: Move dual-cpu NS files into a dedicated folder
Gather all the dual-cpu NS .c files in a dedicated folder
multi_core under interface/src.
Put all the dual-cpu interface header files in a dedicated folder
multi-core under interface/include.

Change-Id: Ia6847eb03a663e66260690ad88addb1521f13fcd
Signed-off-by: David Hu <david.hu@arm.com>

--- a/interface/CMakeLists.txt
+++ b/interface/CMakeLists.txt
@@ -1,5 +1,5 @@
 #-------------------------------------------------------------------------------
-# Copyright (c) 2020, Arm Limited. All rights reserved.
+# Copyright (c) 2020-2021, Arm Limited. All rights reserved.
 #
 # SPDX-License-Identifier: BSD-3-Clause
 #
@@ -27,6 +27,7 @@ target_include_directories(psa_interface
         ${CMAKE_CURRENT_SOURCE_DIR}/include
         ${CMAKE_BINARY_DIR}/generated/interface/include
         ${CMAKE_CURRENT_SOURCE_DIR}/include/os_wrapper
+        $<$<OR:$<BOOL:${FORWARD_PROT_MSG}>,$<BOOL:${TFM_MULTI_CORE_TOPOLOGY}>>:${CMAKE_CURRENT_SOURCE_DIR}/include/multi_core>
 )
 
 # PSA interface files are generated from a template
